Do not instantiate Long/Short/Integer
This patch removes explicit instantiation in favor of letting the JVM
decide what to do. Also use valueOf() where needed and finish the
BigInteger instantiation cleanup.

Change-Id: I8325679ea3fb023f39cb4814040d1f535eeecc95
Signed-off-by: Robert Varga <rovarga@cisco.com>
Signed-off-by: Michal Rehak <mirehak@cisco.com>